# openfisca-aotearoa

./: .flake8  .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  has-functional-changes.sh  is-version-number-acceptable.sh  publish-git-tag.sh
.github/workflows/: build.yml  ci.yml  deploy.yml  docs.yml  validate.yml
conductor/: legislative_freshness_review_20260619.md  product-guidelines.md  product.md  roadmap.md  roadmap_implementation_assessment_20260618.md  tech-stack.md  tracks.md  vcs.md  workflow.md
conductor/archive/ai_test_automation_20260618/: index.md  manual_verification.md  parameters.md  review_checklist.md  spec.md  testsprite_evaluation.md
conductor/archive/codify_acc_levy_regs_20260615/: archive_note.md  citations.md  index.md  legislative_currentness.md  parameters.md
conductor/archive/codify_housing_restructuring_20260615/: archive_note.md  formulas.md  index.md  legislative_currentness.md  metadata.json
conductor/archive/codify_income_tax_core_20260615/: index.md  parameters.md  plan.md  situation_tests.md  spec.md
conductor/archive/codify_pae_ora_20260615/: archive_note.md  index.md  legislative_currentness.md  parameters.md  plan.md  situation_tests.md
conductor/archive/codify_social_security_core_20260615/: citations.md  formulas.md  index.md  situation_tests.md  spec.md
conductor/archive/codify_tax_admin_20260615/: archive_note.md  citations.md  index.md  legislative_currentness.md  spec.md
conductor/archive/conductor_registry_normalization_20260719/: index.md  metadata.json  plan.md
conductor/archive/github_actions_20260615/: index.md  plan.md  spec.md
conductor/archive/github_pages_20260615/: index.md  metadata.json  plan.md  spec.md
conductor/archive/high_performance_api_20260618/: formulas.md  index.md  plan.md  runtime_selection.md
conductor/archive/integrate_nztaxmicrosim_20260615/: index.md  metadata.json  plan.md  spec.md
conductor/archive/kiwisaver_minimum_contributions_20260719/: evidence.jsonl  index.md  metadata.json  plan.md  spec.md
conductor/archive/legal_audit_publish_gate_20260618/: citations.md  formulas.md  index.md  manual_verification.md  metadata.json  parameters.md  readiness_criteria.md  situation_tests.md  tracks_9_14_readiness_report.md
conductor/archive/legislation_audit_20260615/: audit_report.md  index.md  metadata.json  plan.md  spec.md
conductor/archive/legislation_evidence_pipeline_20260618/: citation_inventory.md  evidence_manifest_schema.md  (+3 more)
conductor/code_styleguides/: markdown.md
docs/: api.md  quality-gates.md  workspace.md
docs-site/: astro.config.mjs  generate_parameters.py  package-lock.json  package.json
docs-site/public/: parameters.json
docs-site/src/: parameters.json
openfisca_aotearoa/: __init__.py  ai_test_automation.py  evidence.py  microsimulation.py  readiness.py  simulation.py  structure.json
openfisca_aotearoa/api/: __init__.py  app.py  cli.py  models.py
openfisca_aotearoa/tests/: individual_income_tax_rate.yaml  test_ai_test_automation.py  test_api.py  test_api_app.py  test_api_models.py  test_attach_git_note.py  test_evidence.py  test_hypothesis_quality_gate.py  test_microsimulation_adapters.py  test_microsimulation_contract.py  test_microsimulation_runner.py  test_readiness.py  test_simulation.py
scripts/: attach_git_note.py  check_publish_readiness.py  generate_ai_test_candidates.py  run_complexity_gate.py  run_openfisca_yaml_tests.py  smoke_api_server.py  smoke_workspace.py
(+249 files in other folders)
