[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "openfisca-aotearoa"
dynamic = ["version"]
dependencies = [
    "openfisca-core[web-api] >=44.6.0",
    "pandas>=2.2.1",
    "polars>=1.0.0",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
    "orjson>=3.9.0",
    "numpy>=2.0.0",
    "safetensors>=0.4.0",
    "ty>=0.0.1",
]
requires-python = ">=3.11"
authors = [
    { name = "Asghar Hussain Kazi <https://github.com/asgharkazi>" },
    { name = "Brenda Wallace <https://github.com/Br3nda>" },
    { name = "Hamish Fraser <https://hamish.dev>" },
    { name = "Jonah Duckles <https://github.com/jduckles>" },
    { name = "Mark Calvert <https://github.com/MarkCalvert>" },
    { name = "Mauko Quiroga Alvarado <https://mauko.me>" },
    { name = "Merrin Macleod <https://github.com/mermop>" },
    { name = "Pia Andrews <https://github.com/piacandrews>" }
]
maintainers = [
    { name = "Hamish Fraser <https://hamish.dev>" },
    { name = "Jonah Duckles <https://github.com/jduckles>" },
]
description = "OpenFisca Rules As Code model for Aotearoa."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["microsimulation", "tax", "benefit", "rac", "rules-as-code"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["openfisca_aotearoa"]

# Required to copy openfisca_aotearoa/situation_examples/*.json files
[tool.setuptools.package-data]
'*' = ['*.json']

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
    "basedpyright>=1.12.0",
    "complexipy>=0.2.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-gremlins>=0.1.0",
    "hypothesis>=6.100.0",
    "mutmut>=2.4.0",
    "scalene>=1.5.0; sys_platform != 'win32'",
    "vale>=2.30.0",
]

[project.urls]
Homepage = "https://github.com/edithatogo/openfisca-aotearoa"
Repository = "https://github.com/edithatogo/openfisca-aotearoa"
Documentation = "https://openfisca.org/doc"
Issues = "https://github.com/edithatogo/openfisca-aotearoa/issues"
Changelog = "https://github.com/edithatogo/openfisca-aotearoa/blob/main/CHANGELOG.md"

[tool.pytest.ini_options]
addopts = "--showlocals --doctest-modules --strict-markers --strict-config -p no:cacheprovider"
testpaths = [ "openfisca_aotearoa/tests" ]
python_files = "**/*.py"
filterwarnings = [
    "error",
    "ignore::pytest.PytestUnraisableExceptionWarning",
    "ignore::ResourceWarning",
    "ignore::UserWarning",
]

[tool.ruff]
target-version = "py311"
line-length = 80

[tool.ruff.lint]
select = ["F"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.basedpyright]
typeCheckingMode = "basic"
pythonVersion = "3.11"
exclude = [
    "openfisca_aotearoa/variables",
]
reportGeneralTypeIssues = "none"
reportArgumentType = "none"
reportInvalidTypeArguments = "none"
reportMissingImports = "none"
reportMissingModuleSource = "none"
reportSelfClsParameterName = "none"

[tool.complexipy]
max_cognitive_complexity = 15
